--- a/style.css
+++ b/style.css
@@ -29,3 +29,9 @@ body {
     margin-bottom: 20px;
     box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.5);
   }
+
+  .buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
+  }
